--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /* Place your CSS styles in this file */
 
 h1 {
-    text-align: center;
+    text-align: left;
     font-family: "Source Sans Pro", sans-serif;
     font-weight: normal;
 }
 
 body{
     background-color: white;
+
 }
