--- a/style.css
+++ b/style.css
@@ -7,6 +7,19 @@ h1 {
 }
 
 body{
-    background-color: white;
+    background-color: #6996AD;
 
 }
+
+h1{
+    color:white;
+}
+
+p{
+    color:white;
+}
+
+a{
+    color:white;
+}
+
