--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
 
 body{
     background-color: #6996AD;
-
+    font-family: "Source Sans Pro", sans-serif;
 }
 
 h1{
@@ -16,7 +16,7 @@ h1{
 }
 
 h2{
-    color:white;
+    color:rgb(255, 255, 255);
 }
 
 h3{
