--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
 /* Place your CSS styles in this file */
 
+.bottomPanelIndex{
+    background-color: cornsilk;
+    width: 100px;
+    height: 130px;
+    text-decoration: none;
+    padding:10px;
+    text-align: center;
+    align-content: center;
+}
+
+.bottomPanelIndex p {
+    color: crimson;
+}
+
+.flex-container {
+      display: flex;
+      gap: 10px;
+      align-items: left;
+      
+}
+
+
+
 h1 {
     text-align: left;
     font-family: "Source Sans Pro", sans-serif;
@@ -34,5 +57,16 @@ a{
 .mainbitch{
     padding:20px;
 }
+
+.panel{
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    text-decoration: none;
+    padding:10px;
+    text-align: center;
+    align-content: center;
+}
+
 
 
